[gd_scene load_steps=4 format=3 uid="uid://bgs015qajg83x"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_uxtf7"]
[ext_resource type="PackedScene" uid="uid://c4651j2w7q8qj" path="res://scenes/turret.tscn" id="2_abcde"]
[ext_resource type="PackedScene" uid="uid://cvyq55n5x8qjq" path="res://ui/game_ui.tscn" id="3_xyz78"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_uxtf7")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0 # Placeholder, will be set by script
offset_bottom = 648.0 # Placeholder, will be set by script
color = Color(0.12549, 0.12549, 0.12549, 1) # Dark Gray #202020

[node name="PlayerTurret" parent="." instance=ExtResource("2_abcde")]
position = Vector2(576, 598) # Placeholder, will be set by script

[node name="GameUI_Instance" parent="." instance=ExtResource("3_xyz78")]
